--- a/css/stylesheets/style.css
+++ b/css/stylesheets/style.css
@@ -21,7 +21,6 @@ body {
 }
 
 h3 {
-  text-transform: uppercase;
   color: #41464b;
 }
 
@@ -31,6 +30,123 @@ p {
   font-weight: 300;
 }
 
+/*=========================================================
+                        BUTTONS
+===========================================================*/
+.btn-general {
+  /* border-color: #fff; */
+  border-width: 1px;
+  border-radius: 6px;
+  font-size: 1.6vh;
+  /* padding: 12px 26px 12px 26px; */
+  padding: 1vh 1vw;
+  font-weight: 300;
+}
+.btn-white {
+  background-color: #fff;
+  color: #fff;
+}
+.btn-white:hover,
+.btn-white:focus {
+  background-color: #fff;
+  color: #41464b;
+}
+.btn-mint {
+  background-color: #81D398;
+  color: #fff;
+}
+.btn-mint:hover,
+.btn-mint:focus {
+  background-color: #fff;
+  color: #81D398;
+}
+.btn-purple {
+  background-color: #736EDF;
+  color: #fff;
+}
+.btn-purple:hover,
+.btn-purple:focus {
+  background-color: #fff;
+  color: #736EDF;
+}
+.home-arrow-btn{
+  color: #81D398;
+  padding: 20px;
+}
+.home-arrow-btn:hover,
+.home-arrow-btn:focus
+{
+  color: #fff;
+}
+
+/*=========================================================
+                        HEADER BACKGROUND
+===========================================================*/
+#home-grid {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  overflow: hidden;
+  z-index: -1;
+}
+.purple-dark {
+  background-color: #752DD0;
+  height: 20vh;
+}
+.purple-medium {
+  background-color: #744DDC;
+  height: 35vh;
+}
+.purple-light {
+  background-color: #736EDF;
+  height: 16vh;
+}
+.purple-grid-rows {
+  transform: skewY(-10deg);
+  margin-top: -20vh;
+  padding-bottom: 20vh;
+}
+/*=========================================================
+                        HEADER CONTENT
+===========================================================*/
+#home-content-box {
+  width: 100%;
+  height: 100%;
+  margin-top: -60vh;
+  display: table;
+}
+#home-content-box-inner {
+  vertical-align: middle;
+  text-align: center;
+}
+#home-heading h3 {
+  color: #fff;
+  font-size: 4.5vh !important;
+  font-weight: 500;
+  margin: 20px 0 20px 0;
+  letter-spacing: 2px;
+}
+#search-form {
+  display: inline-block;
+  align: left;
+  margin-bottom: 60px;
+}
+form .search-form-input {
+  background: #fff;
+  border-radius: 6px;;
+  font-size: 17px;
+  font-weight: 300;
+  padding: 8px 6vw;
+  /* margin-bottom: 20px; */
+  color: #fff;
+}
+#home-sub-heading p{
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1.5vh;
+  font-weight: 200;
+}
 /*=========================================================
                         NAVIGATION
 ===========================================================*/
@@ -49,15 +165,14 @@ p {
   float: right;
 }
 .navbar-nav li a {
-  color: #752DD0;
+  color: #fff;
   font-size: 15px;
-  text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 700;
 }
 .navbar-nav li a:hover, .navbar-nav li a:focus {
   background: none;
-  color: #34c6d3;
+  color: #81D398;
 }
 .navbar-toggle {
   background-color: rgba(0,0,0,0.1);
@@ -71,5 +186,88 @@ p {
   max-height: none !important;
 }
 .mywebnow-top-nav ul.navbar-nav li.active a {
-  color: #34c6d3
+  color: #81D398
 }
+/*=========================================================
+                        ANIMATE
+===========================================================*/
+#home-heading {
+  animation-delay: .1s;
+  animation-duration: .1s;
+}
+#home-btn {
+  animation-delay: .1s;
+  animation-duration: .2s;
+}
+
+/*=========================================================
+                        CONTENT BOX
+===========================================================*/
+.content-box {
+  padding: 60px 0 60px 0;
+}
+.content-title h3{
+  font-size: 3.5vh;
+  font-weight: 600;
+  text-align: center;
+  margin: 0 0 30px 0;
+}
+.content-title-underline {
+  width: 30px;
+  height: 3px;
+  background-color: #34c6d3;
+  margin: 0 auto 30px auto;
+}
+
+/*=========================================================
+                        ABOUT
+===========================================================*/
+#about-content-box {
+  height: 700px;
+  padding: 0 40px 0 40px;
+}
+#about-content-box-outer {
+  width: 60%;
+  height: 100%;
+  margin: 0 auto 0 auto;
+  display: table;
+}
+#about-content-box-inner {
+  vertical-align: middle;
+  text-align: center;
+  display: table-cell;
+  padding: 0 10px;
+}
+#about-desc p {
+  margin-bottom: 20px;
+}
+
+/*=========================================================
+                        SERVICES
+===========================================================*/
+/* .service-item {
+  padding: 20px 0 20px 0;
+  margin-bottom: 20px;
+}
+.service-item-icon i {
+  color: #34c6d3;
+  float: left;
+  padding: 15px;
+  margin-right: 25px;
+  width: 75px;
+  height: 75px;
+  text-align: center;
+}
+.service-item:hover .service-item-icon i {
+  color: #fff;
+  background-color: #34c6d3;
+}
+.service-item-title h3 {
+  font-size: 2vh;
+  font-weight: 400;
+  margin: 0 0 10px 0;
+}
+.service-item-desc p {
+  margin: 0;
+  padding-left: 85px;
+} */
