--- a/css/stylesheets/style.css
+++ b/css/stylesheets/style.css
@@ -16,41 +16,31 @@
 html, body {
   height: 100vh;
 }
-
 body {
   font-family: "Roboto", sans-sans-serif;
 }
-
 h3 {
   color: #41464b;
 }
-
 p {
   color: #64707b;
   font-size: 16px;
   font-weight: 300;
 }
-
+#page-content-wrapper {
+  position: absolute;
+  top: 0px;
+  width: 100%;
+}
 /*=========================================================
                         BUTTONS
 ===========================================================*/
 .btn-general {
-  /* border-color: #fff; */
   border-width: 1px;
   border-radius: 6px;
   font-size: 1.6vh;
-  /* padding: 12px 26px 12px 26px; */
   padding: 1vh 1vw;
   font-weight: 300;
-}
-.btn-white {
-  background-color: #fff;
-  color: #fff;
-}
-.btn-white:hover,
-.btn-white:focus {
-  background-color: #fff;
-  color: #41464b;
 }
 .btn-mint {
   background-color: #81D398;
@@ -81,12 +71,12 @@ p {
 }
 
 /*=========================================================
-                        HEADER BACKGROUND
+                        GRID BACKGROUND
 ===========================================================*/
-#home-grid {
-  background:cover;
+#background-grid {
   display: grid;
   width: 100%;
+  position:relative;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
   overflow: hidden;
@@ -110,21 +100,21 @@ p {
 }
 .off-white-section {
   background-color: #F5F9FC;
-  height: 16vh;
+  height: 20vh;
 }
-.purple-grid-rows {
+.background-grid-rows {
   transform: skewY(-10deg);
   margin-top: -20vh;
   padding-bottom: 20vh;
 }
+
 /*=========================================================
                         HEADER CONTENT
 ===========================================================*/
 #home-content-box {
   width: 100%;
   height: 100%;
-  top: 20px;
-  margin-top: -60vh;
+  margin-top: 10vh;
   display: table;
 }
 #home-content-box-inner {
@@ -162,6 +152,10 @@ form .search-form-input {
                         NAVIGATION
 ===========================================================*/
 .navbar {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 0;
   padding: 10px 0;
   transition: all .5s ease-in-out;
 }
@@ -214,8 +208,10 @@ form .search-form-input {
                         ABOUT
 ===========================================================*/
 #about-content-box {
-  height: 700px;
-  padding: 0 40px 0 40px;
+  height: auto;
+  width: 60%;
+  margin: 0 auto 0 auto;
+  padding: 20vh 40px 10vh 40px;
 }
 #about-content-box-outer {
   width: 60%;
