--- a/css/stylesheets/style.css
+++ b/css/stylesheets/style.css
@@ -32,7 +32,8 @@ p {
   top: 0px;
   width: 100%;
 }
-/*=========================================================
+
+========================================================
                         BUTTONS
 ===========================================================*/
 .btn-general {
@@ -60,7 +61,16 @@ p {
   background-color: #fff;
   color: #736EDF;
 }
-.home-arrow-btn{
+.btn-white {
+  background-color: #fff;
+  color: #736EDF;
+}
+.btn-white:hover,
+.btn-white:focus {
+  background-color: #736EDF;
+  color: #fff;
+}
+/* .home-arrow-btn{
   color: #81D398;
   padding: 20px;
 }
@@ -68,6 +78,14 @@ p {
 .home-arrow-btn:focus
 {
   color: #fff;
+} */
+
+.home-arrow-icon i {
+  color: #fff;
+}
+.home-arrow-icon:hover i {
+  color: #744DDC;
+  border-radius: 6px;
 }
 
 /*=========================================================
@@ -96,12 +114,19 @@ p {
 }
 .white-section {
   background-color: #fff;
-  height: 80vh;
+  height: 90vh;
 }
 .off-white-section {
   background-color: #F5F9FC;
-  height: 20vh;
+  height: 40vh;
+  bottom: 0;
 }
+/* .purple-medium-footer {
+  background-color: #744DDC;
+  transform: skewY(10deg);
+  height: 40vh;
+  margin-top: -20vh;
+} */
 .background-grid-rows {
   transform: skewY(-10deg);
   margin-top: -20vh;
@@ -232,6 +257,29 @@ form .search-form-input {
 /*=========================================================
                         SERVICES
 ===========================================================*/
+#services-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 10px;
+  grid-auto-flow: dense;
+  justify-content: center;
+  align-items: center;
+}
+.service-item {
+  display: block;
+  padding: 20px;
+  background-color: #FCFCFD;
+  border: 2px solid #F5F9FC;
+  border-radius: 6px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+#services-grid-outer-wrapper {
+  padding: 0 20vw;
+  justify-content: center;
+  align-items: center;
+}
 #services-content-box {
   height: 100%;
   justify-content: center;
@@ -246,43 +294,11 @@ form .search-form-input {
 .services-content-title-underline {
   width: 20px;
   height: 2px;
-  background-color: #34c6d3;
+  background-color: #744DDC;
   margin: 20px auto 80px auto;
 }
-#services-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  grid-gap: 20px;
-  grid-auto-flow: dense;
-  justify-content: center;
-  align-items: center;
-}
-.service-item {
-  background: #fff;
-  display: block;
-  padding: 5px;
-  width: 400px;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  border-radius: 6px;
-  background-color: #FCFCFD;
-  border: 2px solid #F5F9FC;
-}
-#services-grid-outer-wrapper {
-  padding: 0 20vw;
-  justify-content: center;
-  align-items: center;
-}
-
-
-
-/* .service-item {
-  padding: 20px 0 20px 0;
-  margin-bottom: 20px;
-}
 .service-item-icon i {
-  color: #34c6d3;
+  color: #744DDC;
   float: left;
   padding: 15px;
   margin-right: 25px;
@@ -292,7 +308,8 @@ form .search-form-input {
 }
 .service-item:hover .service-item-icon i {
   color: #fff;
-  background-color: #34c6d3;
+  background-color: #744DDC;
+  border-radius: 6px;
 }
 .service-item-title h3 {
   font-size: 2vh;
@@ -302,4 +319,31 @@ form .search-form-input {
 .service-item-desc p {
   margin: 0;
   padding-left: 85px;
-} */
+}
+
+/*=========================================================
+                        CONTACT
+===========================================================*/
+#contact{
+}
+.contact-content-box-outer {
+  padding: 10vh 10vw;
+}
+.contact-titles {
+  float: left;
+}
+
+.contact-buttons {
+  float: right;
+}
+
+/*=========================================================
+                        FOOTER
+===========================================================*/
+footer {
+  background-color: #744DDC;
+  height: 20vh;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
