--- a/css/stylesheets/style.css
+++ b/css/stylesheets/style.css
@@ -1,6 +1,5 @@
 /*=====================================================
                 DEFAULT VALUES:
-
                 Font Family       : Roboto Condensed
                 Dark Purple       : #752DD0   (header)
                 Medium Purple     : #744DDC   (header)
@@ -11,358 +10,16 @@
                 Off White:        : #FCFCFD    (service card background)
                 Steel Gray        : #41464b   (headings)
                 Black             : #000
-
 ========================================================*/
-html, body {
-  height: 100vh;
-}
-body {
-  font-family: "Roboto", sans-sans-serif;
-}
-h3 {
-  color: #41464b;
-}
-p {
-  color: #64707b;
-  font-size: 16px;
-  font-weight: 300;
-}
-#page-content-wrapper {
-  position: absolute;
-  top: 0px;
-  width: 100%;
-}
-
-========================================================
-                        BUTTONS
-===========================================================*/
-.btn-general {
-  border-width: 1px;
-  border-radius: 6px;
-  font-size: 1.6vh;
-  padding: 1vh 1vw;
-  font-weight: 300;
-}
-.btn-mint {
-  background-color: #81D398;
-  color: #fff;
-}
-.btn-mint:hover,
-.btn-mint:focus {
-  background-color: #fff;
-  color: #81D398;
-}
-.btn-purple {
-  background-color: #736EDF;
-  color: #fff;
-}
-.btn-purple:hover,
-.btn-purple:focus {
-  background-color: #fff;
-  color: #736EDF;
-}
-.btn-white {
-  background-color: #fff;
-  color: #736EDF;
-}
-.btn-white:hover,
-.btn-white:focus {
-  background-color: #736EDF;
-  color: #fff;
-}
-
-/*=========================================================
-                        GRID BACKGROUND
-===========================================================*/
-#background-grid {
-  display: grid;
-  width: 100%;
-  position:relative;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto;
-  overflow: hidden;
-  z-index: -1;
-}
-.purple-dark-section {
-  background-color: #752DD0;
-  height: 20vh;
-}
-.purple-medium-section {
-  background-color: #744DDC;
-  height: 35vh;
-}
-.purple-light-section {
-  background-color: #736EDF;
-  height: 16vh;
-}
-.white-section {
-  background-color: #fff;
-  height: 90vh;
-}
-.off-white-section {
-  background-color: #F5F9FC;
-  height: 40vh;
-}
-.background-grid-rows {
-  transform: skewY(-10deg);
-  margin-top: -20vh;
-  padding-bottom: 20vh;
-}
-
-/*=========================================================
-                        HOME/HEADER CONTENT
-===========================================================*/
-#home-content-box {
-  width: 100%;
-  height: 100%;
-  margin-top: 10vh;
-  display: table;
-}
-#home-content-box-inner {
-  vertical-align: middle;
-  text-align: center;
-}
-#home-heading h3 {
-  color: #fff;
-  font-size: 4.5vh !important;
-  font-weight: 500;
-  margin: 20px 0 20px 0;
-  letter-spacing: 2px;
-}
-#search-form {
-  display: inline-block;
-  align: left;
-  margin-bottom: 60px;
-}
-form .search-form-input {
-  background: #fff;
-  border-radius: 6px;;
-  font-size: 17px;
-  font-weight: 300;
-  padding: 8px 6vw;
-  /* margin-bottom: 20px; */
-  color: #fff;
-}
-#home-sub-heading p{
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 1.5vh;
-  font-weight: 200;
-}
-.home-arrow-icon i {
-  color: #fff;
-}
-.home-arrow-icon:hover i {
-  color: #744DDC;
-  border-radius: 6px;
-}
-
-/*=========================================================
-                        NAVIGATION
-===========================================================*/
-.navbar {
-  position: fixed;
-  top: 0px;
-  width: 100%;
-  z-index: 1;
-  padding: 10px 0;
-  transition: all .5s ease-in-out;
-}
-.mywebnow-top-nav {
-  padding: 7px 0;
-}
-.mywebnow-nav-wrapper {
-  padding: 0 35px;
-}
-.navbar-nav {
-  float: right;
-}
-.navbar-nav li a {
-  color: #fff;
-  font-size: 15px;
-  letter-spacing: 1px;
-  font-weight: 700;
-}
-.navbar-nav li a:hover,
-.navbar-nav li a:focus {
-  background: none;
-  color: #81D398;
-}
-.navbar-toggle {
-  background-color: rgba(0,0,0,0.1);
-  /* border: 1px solid #fff; */
-  border-radius: 0;
-}
-.navbar-toggle .icon-bar {
-  background-color: #fff;
-}
-.navbar-collapse {
-  max-height: none !important;
-}
-.mywebnow-top-nav ul.navbar-nav li.active a {
-  color: #81D398
-}
-
-/*=========================================================
-                        ANIMATE
-===========================================================*/
-#home-heading {
-  animation-delay: .1s;
-  animation-duration: .1s;
-}
-#home-btn {
-  animation-delay: .1s;
-  animation-duration: .2s;
-}
-/*=========================================================
-                        ABOUT
-===========================================================*/
-#about-content-box {
-  height: auto;
-  width: 60%;
-  margin: 0 auto 0 auto;
-  padding: 20vh 40px 10vh 40px;
-}
-#about-content-box-wrapper {
-  vertical-align: middle;
-  text-align: center;
-  padding: 0 10px;
-}
-#about-desc p {
-  margin-bottom: 20px;
-  justify-content: center;
-}
-
-/*=========================================================
-                        SERVICES
-===========================================================*/
-.services-content-box {
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-}
-.services-content-title h3{
-  font-size: 2vh;
-  font-weight: 300;
-  letter-spacing: 2px;
-  text-align: center;
-}
-.services-content-title-underline {
-  width: 20px;
-  height: 2px;
-  background-color: #744DDC;
-  margin: 20px auto 80px auto;
-}
-.services-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 10px;
-  grid-auto-flow: dense;
-  justify-content: center;
-  align-items: center;
-}
-.service-item {
-  display: block;
-  padding: 20px;
-  background-color: #FCFCFD;
-  border: 2px solid #F5F9FC;
-  border-radius: 6px;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-}
-.services-grid-wrapper {
-  padding: 0 10vw;
-  justify-content: center;
-  align-items: center;
-}
-.service-item-icon i {
-  color: #744DDC;
-  float: left;
-  padding: 5px;
-  align-items: center;
-}
-.service-item:hover .service-item-icon i {
-  color: #fff;
-  background-color: #744DDC;
-  border-radius: 6px;
-}
-.service-item-title h3 {
-  font-size: 1.3vh;
-  font-weight: 600;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  margin: 0 0 10px 0;
-}
-.service-item-desc p {
-  font-size: 16px;
-  margin: 0;
-  padding-left: 85px;
-}
-
-/*=========================================================
-                        CONTACT
-===========================================================*/
-#contact{
-}
-.contact-content-box-wrapper {
-  padding: 40px;
-}
-.contact-titles {
-  float: left;
-}
-.contact-text-header p {
-  color: #736EDF;
-  letter-spacing: 1px;
-}
-.contact-text-sub-header p {
-  color: #752DD0;
-  letter-spacing: 1px;
-}
-
-.contact-buttons {
-  float: right;
-}
-
-/*=========================================================
-                        FOOTER
-===========================================================*/
-footer {
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-  background-color: #744DDC;
-  height: 22vh;
-  padding: 30px 10px;
-}
-footer ul {
-  list-style: none;
-}
-footer li {
-  color: #fff;
-  font-weight: light;
-}
-
-/*=========================================================
-                        SOCIAL
-===========================================================*/
-.social-list {
-  padding-left: 0;
-}
-.social-list li {
-  list-style: none;
-  display: inline-block;
-  width: 32px;
-  height: 32px;
-  margin-right: 6px;
-  margin-top: 10px;
-}
-.social-icon i {
-  font-size: 17px;
-}
-.icon-white i {
-  color: #fff;
-}
-.social-icon i:hover {
-  color: #81D398;
-}
+@import "page/animation.css";
+@import "page/background.css";
+@import "page/general.css";
+@import "page/responsive.css";
+@import "sections/home.css";
+@import "sections/navigation.css";
+@import "sections/about.css";
+@import "sections/services.css";
+@import "sections/contact.css";
+@import "sections/footer.css";
+@import "symbols/socials.css";
+@import "symbols/buttons.css";
