--- a/css/stylesheets/sections/home.css
+++ b/css/stylesheets/sections/home.css
@@ -4,10 +4,12 @@
   margin-top: 10vh;
   display: table;
 }
+
 #home-content-box-inner {
   vertical-align: middle;
   text-align: center;
 }
+
 #home-heading h3 {
   color: #fff;
   font-size: 4.5vh !important;
@@ -15,29 +17,35 @@
   margin: 20px 0 20px 0;
   letter-spacing: 2px;
 }
+
 #search-form {
   display: inline-block;
   align: left;
   margin-bottom: 60px;
 }
+
 form .search-form-input {
   background: #fff;
-  border-radius: 6px;;
+  border-radius: 6px;
+  ;
   font-size: 17px;
   font-weight: 300;
   padding: 8px 6vw;
   /* margin-bottom: 20px; */
   color: #fff;
 }
-#home-sub-heading p{
+
+#home-sub-heading p {
   color: #fff;
   text-transform: uppercase;
   font-size: 1.5vh;
   font-weight: 200;
 }
+
 .home-arrow-icon i {
   color: #fff;
 }
+
 .home-arrow-icon:hover i {
   color: #744DDC;
   border-radius: 6px;
