--- a/css/stylesheets/sections/home.css
+++ b/css/stylesheets/sections/home.css
@@ -1,16 +1,16 @@
-#home-content-box {
+.home-content-box {
   width: 100%;
   height: 100%;
   margin-top: 10vh;
   display: table;
 }
 
-#home-content-box-inner {
+.home-content-box-inner {
   vertical-align: middle;
   text-align: center;
 }
 
-#home-heading h3 {
+.home-heading h3 {
   color: #fff;
   font-size: 4.5vh !important;
   font-weight: 500;
@@ -35,7 +35,7 @@ form .search-form-input {
   color: #fff;
 }
 
-#home-sub-heading p {
+.home-sub-heading p {
   color: #fff;
   text-transform: uppercase;
   font-size: 1.5vh;
