--- a/css/stylesheets/sections/about.css
+++ b/css/stylesheets/sections/about.css
@@ -1,17 +1,17 @@
-#about-content-box {
+.about-content-box {
   height: auto;
   width: 60%;
   margin: 0 auto 0 auto;
-  padding: 20vh 40px 10vh 40px;
+  padding: 12vh 0 10vh 0;
 }
 
-#about-content-box-wrapper {
+.about-content-box-wrapper {
   vertical-align: middle;
   text-align: center;
-  padding: 0 10px;
+  padding: 0 160px;
 }
 
-#about-desc p {
+.about-description p {
   margin-bottom: 20px;
   justify-content: center;
 }
