--- a/css/stylesheets/sections/services.css
+++ b/css/stylesheets/sections/services.css
@@ -21,7 +21,7 @@
 
 .services-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(2, minmax(300px, 1fr));
   grid-gap: 10px;
   grid-auto-flow: dense;
   justify-content: center;
