--- a/css/stylesheets/page/general.css
+++ b/css/stylesheets/page/general.css
@@ -1,5 +1,10 @@
 html, body {
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden:
+
 }
 
 body {
@@ -19,5 +24,5 @@ p {
 #page-content-wrapper {
   position: absolute;
   top: 0px;
-  width: 100%;
+  width: 100vw;
 }
