--- a/css/stylesheets/sections/footer.css
+++ b/css/stylesheets/sections/footer.css
@@ -15,3 +15,10 @@ footer li {
   color: #fff;
   font-weight: light;
 }
+
+footer .container {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+
+}
