--- a/css/stylesheets/symbols/buttons.css
+++ b/css/stylesheets/symbols/buttons.css
@@ -4,7 +4,7 @@
   font-size: 1.6vh;
   padding: 1vh 1vw;
   font-weight: 300;
-  box-shadow: 4px 10px 18px -5px rgba(0,0,0,0.33);
+  box-shadow: 4px 10px 18px -5px rgba(0, 0, 0, 0.33);
 }
 
 .btn-mint {
@@ -41,7 +41,7 @@
 }
 
 .search-form-submit-btn {
-  box-shadow: 4px 10px 18px -5px rgba(0,0,0,0.33);
+  box-shadow: 4px 10px 18px -5px rgba(0, 0, 0, 0.33);
 }
 
 .home-arrow-icon i {
